# connex-openagi

./: .gitignore  <result_of_action_1>  README.md  agi_memory.db  debug_imports.py  debug_imports_simple.py  install_dependencies.bat  install_dependencies.sh  pcheck.py  pyproject.toml  research_report.md  run.sh  run_smol_brain.bat  run_smol_brain.sh  run_test.bat  server.py  test_autonomous_research.py  test_evaluator_only.py  test_motivation.py  test_output.py  test_self_healing.py  test_sub_brain.bat  test_sub_brain.sh  test_torch.py  train_world.bat  train_world.sh  verify_logging.py  verify_motivation.py  verify_perception_acquisition.py
agi/: SOUL.md  __init__.py  brain.py  config.py  history.py  sub_brain.py
agi/dashboard/: app.py  utils.py
agi/identity/: manager.py
agi/memory/: engine.py  manager.py
agi/motivation/: curiosity.py  (+3 more)
docs/: ARCHITECTURE.md
examples/: api_test.py  basic_usage.py  brain_demo.py  competitor_analysis.py  create_local_skills.py  curiosity_demo.py  custom_skill.py  db_perception_demo.py  expansion_demo.py  identity_demo.py  memory_system_demo.py  perception_reflex_demo.py  refactor_verification.py  self_correction.py  skill_acquisition_demo.py  speak_demo.py  test_chat.py  test_correction.py  test_foundation.py  test_local_import.py  test_memory_vector.py  test_planner.py  test_skill_selection.py  test_skills.py  voice_reflex_demo.py  weather_demo.py
installed_skills/: skills.db
tests/: cuda_check.py  demo_sub_brain.py  test_advanced_foundations.py  test_fix_init.py  test_foundation_layers.py  test_perception_to_world.py  test_smol_brain_api.py  test_smol_brain_streaming.py  test_sub_brain.py  test_sub_brain_hosts.py  test_sub_brain_service.py  test_world_layer_v2.py  verify_time_sensor.py
ui/: DESKTOP_README.md  package-lock.json  package.json
(+129 files in other folders)
